migrate more tests to junit